--- a/public/stylesheets/guides/new.css
+++ b/public/stylesheets/guides/new.css
@@ -1,3 +1,59 @@
+.form-control {
+  font-size: 1.5rem;
+}
+
+.submit-btn {
+  color: white;
+  background-color: #AC2E16;
+  box-shadow: 0px 0px 4px 3px #e23e1d;
+  font-size: 2rem;
+}
+
+.submit-btn:hover {
+  background-color: #e23e1d;
+}
+
+.cancel-btn {
+  background-color: #b38600;
+  box-shadow: 0px 0px 4px 3px #ffbf00;
+}
+
+.cancel-btn:hover {
+  background-color: #ffbf00;
+  font-size: 1.3rem;
+}
+
+.cancel-btn a {
+  color: black;
+}
+
+
+.card {
+  background-color: rgb(27,40,56);
+  color: white;
+}
+
+.hero-btn {
+  color: white;
+  background-color: #AC2E16;
+  box-shadow: 0px 0px 4px 3px #e23e1d;
+}
+
+.hero-btn:hover {
+  background-color: #e23e1d;
+}
+
+.choose-text {
+  color: white;
+  font-size: 3rem;
+}
+
+select {
+  background-color: #3a5678;
+  color: white;
+  cursor: pointer;
+}
+
 .item-container .card {
   height: 64px;
 }
@@ -38,4 +94,33 @@
 .hero-container {
   -ms-overflow-style: none;  /* IE and Edge */
   scrollbar-width: none;  /* Firefox */
+}
+
+body {
+  background: url("/images/backgrounds/map_bg.png") no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+
+.page-title span{
+  transform: translate(-50%,-50%);
+  top: 50%;
+  left: 50%;
+  letter-spacing: 5px;
+  font-size: 4.5rem;
+  font-weight: bold;
+  background-image: linear-gradient(
+ to right,
+ #462523 0,
+ #cb9b51 22%, 
+ #f6e27a 45%,
+ #f6f2c0 50%,
+ #f6e27a 55%,
+ #cb9b51 78%,
+ #462523 100%
+ );
+  color:transparent;
+  -webkit-background-clip:text;
 }
