--- a/public/stylesheets/heroes/show.css
+++ b/public/stylesheets/heroes/show.css
@@ -1,27 +1,60 @@
 .title {
-  font-size: 2.5rem;
-  padding: 0.5rem;
+  font-size: 2.4rem;
+  padding: 0.6rem;
 }
 
-a {
+.date {
+  font-size: 1.3rem;
+}
+
+.page-title {
+  color: white;
+}
+
+.card {
+  background-color: rgb(27,40,56);
+}
+
+.return-btn {
+  color: white;
+  background-color: #AC2E16;
+  box-shadow: 0px 0px 4px 3px #e23e1d;
+}
+
+.return-btn:hover {
+  background-color: #e23e1d;
+}
+
+.return-btn a {
+  color: white;
+  font-size: 1.4rem;
+}
+
+.hero-guide a {
   text-decoration: none;
-  color: black;
+  color: white;
 }
 
-a:hover {
-  color: whitesmoke;
+.hero-guide a:hover {
+  color: #e23e1d;
 }
 
 .guide-header {
-  background-color: #AB2E17;
+  background-color: rgb(27,40,56);
+  color: white;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
 }
 
 .guide-body {
-  background-color: white;
+  background-color: #3a5678;
+  color: white;
 }
 
 .guide-footer {
-  background-color: rgba(171, 46, 23, 0.7);
+  background-color: rgb(27,40,56);
+  border-bottom-right-radius: 10px;
+  border-bottom-left-radius: 10px;
 }
 
 .guide-container {
@@ -52,4 +85,25 @@ a:hover {
 .guide-container {
   -ms-overflow-style: none;  /* IE and Edge */
   scrollbar-width: none;  /* Firefox */
+}
+
+.hero-name span{
+  transform: translate(-50%,-50%);
+  top: 50%;
+  left: 50%;
+  letter-spacing: 5px;
+  font-size: 5rem;
+  font-weight: bold;
+  background-image: linear-gradient(
+ to right,
+ #462523 0,
+ #cb9b51 22%, 
+ #f6e27a 45%,
+ #f6f2c0 50%,
+ #f6e27a 55%,
+ #cb9b51 78%,
+ #462523 100%
+ );
+  color:transparent;
+  -webkit-background-clip:text;
 }
