--- a/views/heroes/index.ejs
+++ b/views/heroes/index.ejs
@@ -3,7 +3,7 @@
 <%- include('../partials/nav') %>
 
 <main>
-  <h1 class="my-4">All Heroes</h1>
+  <h1 class="my-4"><span>All Heroes</span></h1>
   <% if (heroes.length) {%>
     <div class="container created-heroes-container my-4">
       <div class="row row-cols-3 row-cols-lg-6 g-5 justify-content-center">
@@ -12,13 +12,13 @@
             <div class="card h-100 text-center">
               <img src="<%= hero.imageUrl %>" alt="dota2 hero portrait">
               <div class="card-body d-flex flex-column">
-                <h2 class="card-title mt-auto">
+                <h2 class="card-title hero-title mt-auto">
                   <%= hero.name.split("_").join(" ") %> 
                 </h2>
-                <p class="mt-auto"><%= hero.guides.length %> Guides Available</p>
+                <p class="guide-count mt-auto"><%= hero.guides.length %> Guides Available</p>
                 <a 
                   href="/heroes/<%= hero._id %>"
-                  class="btn btn-primary mt-auto"
+                  class="btn hero-btn mt-auto"
                 >
                   Details
                 </a>
@@ -29,16 +29,16 @@
       </div>
     </div>
   <% }else { %>
-    <h2 class="mt-4">No Heroes Yet</h2>
+    <h1 class="notification mt-4">No Heroes Yet</h1>
   <% } %> 
 
   <% if(!user) {%>
-    <h2 class="notification mt-4">Login to add a new Hero</h2>
+    <h1 class="glow mt-4">Login to add a new Hero</h1>
   <% } %>
 
   <% if (user) { %>
     <p>
-      <button class="btn btn-primary mt-4" type="button" data-bs-toggle="collapse" data-bs-target="#collapse-heroes" aria-expanded="false" aria-controls="collapse-heroes">
+      <button class="btn hero-btn collapse-btn mt-4" type="button" data-bs-toggle="collapse" data-bs-target="#collapse-heroes" aria-expanded="false" aria-controls="collapse-heroes">
         Show Available Heroes
       </button>
     </p>
@@ -66,7 +66,7 @@
                       name="imageUrl" 
                       value="<%= results[hero].images.vert %>"
                     >
-                    <button class="btn btn-primary mt-auto" type="submit">Add Hero</button>
+                    <button class="btn hero-btn mt-auto" type="submit">Add Hero</button>
                   </form>
                 </div>
               </div>
