add more styling to profile show and index views

--- a/views/profiles/index.ejs
+++ b/views/profiles/index.ejs
@@ -3,7 +3,7 @@
 <%- include('../partials/nav') %>
 
 <main>
-  <h1 class="my-4">Users</h1>
+  <h1 class="page-title my-5"><span>Users</span></h1>
 
   <div class="row">
     <% profiles.forEach((profile) => { %>
