--- a/public/stylesheets/heroes/show.css
+++ b/public/stylesheets/heroes/show.css
@@ -30,6 +30,17 @@
   font-size: 1.4rem;
 }
 
+.user-btn {
+  color: white;
+  background-color: #AC2E16;
+  box-shadow: 0px 0px 4px 1px #e23e1d;
+}
+
+.user-btn:hover {
+  background-color: #e23e1d;
+}
+
+
 .hero-guide a {
   text-decoration: none;
   color: white;
