--- a/public/stylesheets/profiles/show.css
+++ b/public/stylesheets/profiles/show.css
@@ -7,16 +7,40 @@
   border-radius: 10px;
 }
 
+.card {
+  background-color: rgb(27,40,56);
+}
+
+.date {
+  font-size: 1.3rem;
+}
+
+.user-btn {
+  color: white;
+  background-color: #AC2E16;
+  box-shadow: 0px 0px 4px 1px #e23e1d;
+}
+
+.user-btn:hover {
+  background-color: #e23e1d;
+}
+
 .guide-header {
-  background-color: #AB2E17;
+  background-color: rgb(27,40,56);
+  color: white;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
 }
 
 .guide-body {
-  background-color: white;
+  background-color: #3a5678;
+  color: white;
 }
 
 .guide-footer {
-  background-color: rgba(171, 46, 23, 0.7);
+  background-color: rgb(27,40,56);
+  border-bottom-right-radius: 10px;
+  border-bottom-left-radius: 10px;
 }
 
 .guide-container {
@@ -47,4 +71,33 @@
 .guide-container {
   -ms-overflow-style: none;  /* IE and Edge */
   scrollbar-width: none;  /* Firefox */
+}
+
+.page-title span{
+  transform: translate(-50%,-50%);
+  top: 50%;
+  left: 50%;
+  letter-spacing: 5px;
+  font-size: 5rem;
+  font-weight: bold;
+  background-image: linear-gradient(
+ to right,
+ #462523 0,
+ #cb9b51 22%, 
+ #f6e27a 45%,
+ #f6f2c0 50%,
+ #f6e27a 55%,
+ #cb9b51 78%,
+ #462523 100%
+ );
+  color:transparent;
+  -webkit-background-clip:text;
+}
+
+body {
+  background: url("/images/backgrounds/ogre_bg.png") no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 }
