--- a/views/heroes/show.ejs
+++ b/views/heroes/show.ejs
@@ -91,13 +91,13 @@
           <div class="row guide-footer">
             <div class="col-6 text-center">
               <form action="/guides/<%= guide.id %>/edit" method="GET">
-                <button class="p-2 m-2" type="submit">Edit</button>
+                <button class="user-btn p-2 m-2" type="submit">Edit</button>
               </form>
             </div>
             <div class="col-6 text-center">
               <form action="/guides/<%= guide.id %>?_method=DELETE" method="POST">
                 <input hidden type="text" name="heroId" value="<%= hero._id %>">
-                <button class="p-2 m-2" type="submit">Delete</button>
+                <button class="user-btn p-2 m-2" type="submit">Delete</button>
               </form>
             </div>
           </div>
