--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -52,3 +52,35 @@ main {
 h1 {
   font-size: 3.6rem;
 }
+
+.redirect-btn {
+  color: white;
+  background-color: #AC2E16;
+  box-shadow: 0px 0px 4px 3px #e23e1d;
+  font-size: 2.76rem;
+}
+
+.redirect-btn:hover {
+  background-color: #e23e1d;
+}
+
+.message span{
+  transform: translate(-50%,-50%);
+  top: 50%;
+  left: 50%;
+  letter-spacing: 5px;
+  font-size: 5rem;
+  font-weight: bold;
+  background-image: linear-gradient(
+ to right,
+ #462523 0,
+ #cb9b51 22%, 
+ #f6e27a 45%,
+ #f6f2c0 50%,
+ #f6e27a 55%,
+ #cb9b51 78%,
+ #462523 100%
+ );
+  color:transparent;
+  -webkit-background-clip:text;
+}
