--- a/public/stylesheets/heroes/show.css
+++ b/public/stylesheets/heroes/show.css
@@ -76,6 +76,11 @@
   max-height: 11.42vh;
 }
 
+.message {
+  color: white;
+  font-size: 4.5rem;
+}
+
 /* Hide scrollbar for Chrome, Safari and Opera */
 .item-container::-webkit-scrollbar {
   display: none;
