--- a/views/heroes/show.ejs
+++ b/views/heroes/show.ejs
@@ -105,8 +105,8 @@
       <% }) %>
     </div>
   <% }else { %>
-    <div class="container text-center mt-4">
-      <h1>No Guides Yet</h1>
+    <div class="container text-center mt-5">
+      <h1 class="message">No Guides Yet</h1>
     </div>
   <% } %>
 
